# claude-code-py

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
core/: query.py
docs/: architecture.md  testing.md  tools.md
notebooks/: 01_query_loop.ipynb
permissions/: manager.py  rules.py
tests/: conftest.py  test_permissions.py  test_registry.py  test_tools.py
tools/: base.py  bash.py  file_edit.py  file_read.py  file_write.py  registry.py
